--- a/opensrp-path/build.gradle
+++ b/opensrp-path/build.gradle
@@ -133,7 +133,7 @@ dependencies {
     compile 'junit:junit:4.12'
 
     // Kujaku dependencies
-    compile('io.ona.kujaku:library:0.1.3-info-window') {
+    compile('io.ona.kujaku:library:0.1.3-expose-mapservice-constants.b1') {
         transitive = true
         exclude group: 'com.mapbox.mapboxsdk', module: 'mapbox-android-sdk'
         exclude group: 'com.android.support'
@@ -159,6 +159,7 @@ dependencies {
 
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'junit', module: 'junit'
+        exclude group: "com.google.code.findbugs"
     }
     // PowerMock
     def powerMockVersion = '1.7.1'
