Use newest Android SDK tools

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ android:
   components:
     # tools required
     - tools
+    - platform-tools
+    - tools
     # The BuildTools version used by your project
     - build-tools-26.0.1
     # The SDK version used to compile your projects
