--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,7 @@ script:
   - ls -la
   #- ./gradlew connectedAndroidTest
   #Run All tests Unit and Instrumentation
+  - travis_wait ./gradlew build --stacktrace -x testDebug -x testRelease
   - travis_wait ./gradlew opensrp-path:clean opensrp-path:jacocoTestReport coveralls --stacktrace
 
 after_failure:
